# Doculith

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: Dependencies.cmake
src/: AppModel.h  AppStrings.h  Application.cpp  Application.h  ApplicationConfig.h  Document.h  DocumentQueue.cpp  DocumentQueue.h  Ui.cpp  Ui.h  UiEvents.h  main.cpp
src/platform/: GlfwContext.h  GlfwWindow.cpp  GlfwWindow.h  ImGuiContextGuard.cpp  ImGuiContextGuard.h  PlatformContext.cpp  PlatformContext.h
tests/: CMakeLists.txt  document_queue_test.cpp  smoke_test.cpp
